# iris

./: .gitignore  CMakeLists.txt  README.md  main.cpp  play.cc
cmake/: FindCMinpack.cmake  FindGLM.cmake
example/: README.md
example/store/: default.font  default.monitor  links.cfg
example/store/cones/: README.md
example/store/fonts/: README.md
example/store/monitors/eDP-1/: 20150602.settings  20150825T1555.cac  20150825T1555.rgb2lms  eDP-1.monitor
example/store/subjects/test/: 20150609T1147.isodata  20150609T1147.isoslant  test.subject
lib/: cfg.cc  cfg.h  csv.cc  csv.h  data.cc  data.h  dkl.cc  dkl.h  fit.cc  fit.h  fs.cc  fs.h  iris.h  misc.cc  misc.h  pr655.cc  pr655.h  rgb.cc  rgb.h  scene.cc  scene.h  serial.cc  serial.h  spectra.cc  spectra.h  spectrum.cc  spectrum.h
lib/glue/: arrays.h  basic.cc  basic.h  buffer.cc  buffer.h  colors.h  conatiner.h  monitor.cc  monitor.h  named.h  shader.cc  shader.h  text.cc  text.h  texture.cc  texture.h  widget.cc  widget.h  window.cc  window.h
lib/h5x/: Attribute.cpp  Attribute.hpp  BaseHDF5.cpp  BaseHDF5.hpp  DataSet.cpp  DataSet.hpp  DataSetHDF5.cpp  DataSetHDF5.hpp  DataSpace.cpp  DataSpace.hpp  DataType.cpp  DataType.hpp  DataTypeHDF5.cpp  DataTypeHDF5.hpp  ExceptionHDF5.hpp  File.cpp  File.hpp  Group.cpp  Group.hpp  HId.cpp  HId.hpp  Hydra.hpp  LocID.cpp  LocID.hpp  NDSize.hpp  Selection.cpp  Selection.hpp  TypeId.cpp  TypeId.hpp
plot/: iris-csrgb.py  iris-pc.py  iris-ps.py
tools/: board.cc  calibrate.cc  cfg.cc  cgen.cc  colorcircle.cc  conv.cc  csv.cc  fitiso.cc  fitsine.cc  info.cc  isogen.cc  isoslant.cc  measure.cc  pgen.cc  pr655.cc  rndgen.cc  store.cc
ui/: isoslant.cc  isoslantwnd.cc  isoslantwnd.h  isoslantwnd.ui
